--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -2,6 +2,7 @@
       title={Meta-learning curiosity algorithms}, 
       author={Ferran Alet and Martin F. Schneider and Tomas Lozano-Perez and Leslie Pack Kaelbling},
       year={2020},
+      url={https://arxiv.org/pdf/2003.05325.pdf},
       eprint={2003.05325},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -18,6 +19,7 @@
       title={Exploration by Random Network Distillation}, 
       author={Yuri Burda and Harrison Edwards and Amos Storkey and Oleg Klimov},
       year={2018},
+      url={https://arxiv.org/pdf/1810.12894.pdf},
       eprint={1810.12894},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -27,6 +29,7 @@
       title={BYOL-Explore: Exploration by Bootstrapped Prediction}, 
       author={Zhaohan Daniel Guo and Shantanu Thakoor and Miruna Pîslar and Bernardo Avila Pires and Florent Altché and Corentin Tallec and Alaa Saade and Daniele Calandriello and Jean-Bastien Grill and Yunhao Tang and Michal Valko and Rémi Munos and Mohammad Gheshlaghi Azar and Bilal Piot},
       year={2022},
+      url={https://arxiv.org/pdf/2206.08332.pdf},
       eprint={2206.08332},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -36,6 +39,7 @@
       title={Curiosity in Hindsight: Intrinsic Exploration in Stochastic Environments}, 
       author={Daniel Jarrett and Corentin Tallec and Florent Altché and Thomas Mesnard and Rémi Munos and Michal Valko},
       year={2023},
+      url={https://arxiv.org/pdf/2211.10515.pdf},
       eprint={2211.10515},
       archivePrefix={arXiv},
       primaryClass={stat.ML},
@@ -45,6 +49,7 @@
       title={A Survey of Meta-Reinforcement Learning}, 
       author={Jacob Beck and Risto Vuorio and Evan Zheran Liu and Zheng Xiong and Luisa Zintgraf and Chelsea Finn and Shimon Whiteson},
       year={2023},
+      url={https://arxiv.org/pdf/2301.08028.pdf},
       eprint={2301.08028},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -54,6 +59,7 @@
       title={Curiosity-driven Exploration by Self-supervised Prediction}, 
       author={Deepak Pathak and Pulkit Agrawal and Alexei A. Efros and Trevor Darrell},
       year={2017},
+      url={https://arxiv.org/pdf/1705.05363.pdf},
       eprint={1705.05363},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -63,6 +69,7 @@
       title={Large-Scale Study of Curiosity-Driven Learning}, 
       author={Yuri Burda and Harri Edwards and Deepak Pathak and Amos Storkey and Trevor Darrell and Alexei A. Efros},
       year={2018},
+      url={https://arxiv.org/pdf/1808.04355.pdf},
       eprint={1808.04355},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -111,6 +118,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
       title={Bootstrap your own latent: A new approach to self-supervised Learning}, 
       author={Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and Bernardo Avila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
       year={2020},
+      url={https://arxiv.org/pdf/2006.07733.pdf},
       eprint={2006.07733},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
@@ -154,6 +162,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
       title={Empirical Design in Reinforcement Learning}, 
       author={Andrew Patterson and Samuel Neumann and Martha White and Adam White},
       year={2023},
+      url={https://arxiv.org/pdf/2304.01315.pdf},
       eprint={2304.01315},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
