--- a/assets/bibliography/2024-05-07-mode-switching.bib
+++ b/assets/bibliography/2024-05-07-mode-switching.bib
@@ -172,3 +172,88 @@
   year={2004},
   publisher={Nature Publishing Group UK London}
 }
+
+@inproceedings{osband2019behaviour,
+  title={Behaviour Suite for Reinforcement Learning},
+  author={Osband, Ian and Doron, Yotam and Hessel, Matteo and Aslanides, John and Sezener, Eren and Saraiva, Andre and McKinney, Katrina and Lattimore, Tor and Szepesvari, Csaba and Singh, Satinder and others},
+  booktitle={International Conference on Learning Representations},
+  year={2019}
+}
+
+@article{agarwal2022reincarnating,
+  title={Reincarnating reinforcement learning: Reusing prior computation to accelerate progress},
+  author={Agarwal, Rishabh and Schwarzer, Max and Castro, Pablo Samuel and Courville, Aaron C and Bellemare, Marc},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={28955--28971},
+  year={2022}
+}
+
+@article{machado2018revisiting,
+  title={Revisiting the arcade learning environment: Evaluation protocols and open problems for general agents},
+  author={Machado, Marlos C and Bellemare, Marc G and Talvitie, Erik and Veness, Joel and Hausknecht, Matthew and Bowling, Michael},
+  journal={Journal of Artificial Intelligence Research},
+  volume={61},
+  pages={523--562},
+  year={2018}
+}
+
+@article{raffin2021stable,
+  title={Stable-baselines3: Reliable reinforcement learning implementations},
+  author={Raffin, Antonin and Hill, Ashley and Gleave, Adam and Kanervisto, Anssi and Ernestus, Maximilian and Dormann, Noah},
+  journal={The Journal of Machine Learning Research},
+  volume={22},
+  number={1},
+  pages={12348--12355},
+  year={2021},
+  publisher={JMLRORG}
+}
+
+@article{pignatelli2023survey,
+  title={A Survey of Temporal Credit Assignment in Deep Reinforcement Learning},
+  author={Pignatelli, Eduardo and Ferret, Johan and Geist, Matthieu and Mesnard, Thomas and van Hasselt, Hado and Toni, Laura},
+  journal={arXiv preprint arXiv:2312.01072},
+  year={2023}
+}
+
+
+@article{kumar2022should,
+  title={When should we prefer offline reinforcement learning over behavioral cloning?},
+  author={Kumar, Aviral and Hong, Joey and Singh, Anikait and Levine, Sergey},
+  journal={arXiv preprint arXiv:2204.05618},
+  year={2022}
+}
+
+@article{gu2022review,
+  title={A review of safe reinforcement learning: Methods, theory and applications},
+  author={Gu, Shangding and Yang, Long and Du, Yali and Chen, Guang and Walter, Florian and Wang, Jun and Yang, Yaodong and Knoll, Alois},
+  journal={arXiv preprint arXiv:2205.10330},
+  year={2022}
+}
+
+@inproceedings{ravaioli2022safe,
+  title={Safe reinforcement learning benchmark environments for aerospace control systems},
+  author={Ravaioli, Umberto J and Cunningham, James and McCarroll, John and Gangal, Vardaan and Dunlap, Kyle and Hobbs, Kerianne L},
+  booktitle={2022 IEEE Aerospace Conference (AERO)},
+  pages={1--20},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{vinyals2019grandmaster,
+  title={Grandmaster level in StarCraft II using multi-agent reinforcement learning},
+  author={Vinyals, Oriol and Babuschkin, Igor and Czarnecki, Wojciech M and Mathieu, Micha{\"e}l and Dudzik, Andrew and Chung, Junyoung and Choi, David H and Powell, Richard and Ewalds, Timo and Georgiev, Petko and others},
+  journal={Nature},
+  volume={575},
+  number={7782},
+  pages={350--354},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{huan2016sequential,
+  title={Sequential Bayesian optimal experimental design via approximate dynamic programming},
+  author={Huan, Xun and Marzouk, Youssef M},
+  journal={arXiv preprint arXiv:1604.08320},
+  year={2016}
+}
